Add sizing specification to merchant card image dropdown

--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@ Once they have provided all the necessary additional information, draft a revise
                                 <span id="cardImageCaret" style="font-size: 1.2rem;">▶</span>
                             </div>
                             <div id="cardImageSpecs" style="padding: 1rem; background: white; border: 1px solid #e9ecef; border-top: none; border-radius: 0 0 6px 6px; font-size: 0.9rem; display: none;">
-                                This image will appear on the content card within the <a href="#" style="color: #4CAF50;">Shopify case study gallery</a>.
+                                This image will appear on the content card within the <a href="#" style="color: #4CAF50;">Shopify case study gallery</a>. Sizing: Square, 560x560px minimum.
                             </div>
                         </div>
                     </div>
