Fix all sentence case issues in buttons and headers - Copy to clipboard, Next: step, and account type headers

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     <p>Choose your training path:</p>
                     <div class="path-selection">
                         <button class="path-btn" onclick="goToStep('step2a')">
-                            <h3>With a Pro Account</h3>
+                            <h3>With a pro account</h3>
                             <p>For users with premium AI tool access</p>
                         </button>
                         <button class="path-btn" onclick="goToStep('step2b')">
-                            <h3>With a Free Account</h3>
+                            <h3>With a free account</h3>
                             <p>For users with basic AI tool access</p>
                         </button>
                     </div>
@@ -125,7 +125,7 @@
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Action 1: Input this prompt into your AI tool</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">You are a former journalist at Time magazine, and you've had a few articles published in The New Yorker. You know how to write very well, keeping your articles professional but not corporate. You appreciate a well-timed quippy sentence. You've moved from your career as a journalist and now write case studies that are used by a big tech company to market to merchants who are looking for a new commerce platform but want a partner to help them. Your writing balances professional clarity with engaging narrative—maintaining credibility while avoiding corporate jargon. You excel at transforming technical implementations into business-focused stories that resonate with decision-makers.
 
@@ -159,7 +159,7 @@ You can input that information now."</div>
                 </div>
                 <div class="navigation-buttons">
                     <button class="btn btn-secondary" onclick="goToStep('step1')">Back</button>
-                    <button class="btn btn-primary" onclick="goToStep('step3')">Next: Step 3</button>
+                    <button class="btn btn-primary" onclick="goToStep('step3')">Next: step 3</button>
                 </div>
             </section>
 
@@ -175,7 +175,7 @@ You can input that information now."</div>
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 1</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">You are a former journalist at Time magazine, and you've had a few articles published in The New Yorker. You know how to write very well, keeping your articles professional but not corporate. You appreciate a well-timed quippy sentence. You've moved from your career as a journalist and now write case studies that are used by a big tech company to market to merchants who are looking for a new commerce platform but want a partner to help them. Your writing balances professional clarity with engaging narrative—maintaining credibility while avoiding corporate jargon. You excel at transforming technical implementations into business-focused stories that resonate with decision-makers.
 
@@ -194,7 +194,7 @@ I'm going to give you a series of case study examples. I'd like you to learn the
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 2</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">CASE STUDY EXAMPLE 2
 ATTITUDE Living launches multi-country stores on Shopify Hydrogen and Oxygen, increasing new customers by 9%
@@ -242,7 +242,7 @@ By opting for a purely headless architecture native to Shopify that doesn't rely
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 3</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">CASE STUDY EXAMPLE 3
 Stadium Goods achieved an 80% increase in conversion with VAAN and Shopify
@@ -294,7 +294,7 @@ The Shopify replatforming has given Stadium Goods a powerful, adaptable digital 
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 4</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">CASE STUDY EXAMPLE 4
 quip improves ways of working, increases speed and agility after replatforming to Shopify
@@ -349,7 +349,7 @@ With this strategic shift to Shopify, quip is poised not only for immediate succ
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 5</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">CASE STUDY EXAMPLE 5
 Bambi Baby Reduces Checkout Times Across Retail Stores and Boosts Conversion Rates by 30%
@@ -402,7 +402,7 @@ Looking ahead, Bambi Baby is positioned for continued retail expansion. "The gro
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 6</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">CASE STUDY EXAMPLE 6
 How Omy Laboratoires boosted sales with a redesigned online store
@@ -444,7 +444,7 @@ The launch of Omy's refreshed online store was a glowing success. Thanks to the 
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Training prompt 7</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">&lt;CASE STUDY TEMPLATE&gt;
 Next, I'll provide you with the template. It's important to use this alongside the examples as the guidelines for writing the new case study. Here is the template:
@@ -523,7 +523,7 @@ You can input that information now."</div>
                 </div>
                 <div class="navigation-buttons">
                     <button class="btn btn-secondary" onclick="goToStep('step1')">Back</button>
-                    <button class="btn btn-primary" onclick="goToStep('step3')">Next: Step 3</button>
+                    <button class="btn btn-primary" onclick="goToStep('step3')">Next: step 3</button>
                 </div>
             </section>
 
@@ -657,7 +657,7 @@ You can input that information now."</div>
                 </div>
                 <div class="navigation-buttons">
                     <button class="btn btn-secondary" onclick="goToStep('step3')">Back</button>
-                    <button class="btn btn-primary" onclick="goToStep('step5')">Next: Step 5</button>
+                    <button class="btn btn-primary" onclick="goToStep('step5')">Next: step 5</button>
                 </div>
             </section>
 
@@ -691,7 +691,7 @@ You can input that information now."</div>
                 </div>
                 <div class="navigation-buttons">
                     <button class="btn btn-secondary" onclick="goToStep('step3')">Back</button>
-                    <button class="btn btn-primary" onclick="goToStep('step5')">Next: Step 5</button>
+                    <button class="btn btn-primary" onclick="goToStep('step5')">Next: step 5</button>
                 </div>
             </section>
 
@@ -716,7 +716,7 @@ When you understand this, say, "I'm ready to help repurpose your existing case s
                 </div>
                 <div class="navigation-buttons">
                     <button class="btn btn-secondary" onclick="goToPreviousStep()">Back</button>
-                    <button class="btn btn-primary" onclick="goToStep('step5')">Next: Step 5</button>
+                    <button class="btn btn-primary" onclick="goToStep('step5')">Next: step 5</button>
                 </div>
             </section>
 
@@ -730,7 +730,7 @@ When you understand this, say, "I'm ready to help repurpose your existing case s
                     <div class="prompt-box">
                         <div class="prompt-header">
                             <div class="prompt-title">Action 1: Input this quality assessment prompt</div>
-                            <button class="copy-btn">Copy to Clipboard</button>
+                            <button class="copy-btn">Copy to clipboard</button>
                         </div>
                         <div class="prompt-content">You are now an editor with expertise in Shopify's platform capabilities and partner program. Your task is to thoroughly review the drafted case study for detailed information about how this partner worked with the merchant to grow their business on Shopify. Often, these case studies come to you with missing information, and it's your job to identify where more information is needed.
 
@@ -796,7 +796,7 @@ Once they have provided all the necessary additional information, draft a revise
                 </div>
                 <div class="navigation-buttons">
                     <button class="btn btn-secondary" onclick="goToPreviousStep()">Back</button>
-                    <button class="btn btn-primary" onclick="goToStep('step6')">Next: Step 6</button>
+                    <button class="btn btn-primary" onclick="goToStep('step6')">Next: step 6</button>
                 </div>
             </section>
 
