Update Step 3 callout text and refine Step 5 quality assessment prompt

--- a/index.html
+++ b/index.html
@@ -1242,49 +1242,80 @@ When you understand this, say, "I'm ready to help repurpose your existing case s
 Please evaluate the case study draft you just generated against the following criteria and flag any issues:
 
 1. THE INTRO
+
 Verify that the introduction contains information about the merchant including:
+
 The products or services they provide
+
 What they care about as a brand
+
 When they were founded
+
 A clear statement of challenges they faced
+
 Why they chose to work with the partner
+
 Three clear metrics that each contain a number
 
 2. THE CHALLENGE
+
 Verify that the section with "The challenge:" in the header contains information on:
+
 A clear description of the challenges the merchant faced before they migrated to Shopify
+
 Why each challenge was important to solve
+
 A direct quote from the partner or merchant that relates to the challenges
+
 Why they chose Shopify to address these challenges
 
 3. THE SOLUTION
+
 Verify that the section with "The solution:" contains information on:
+
 The features or capabilities the merchant gained in moving to Shopify
+
 How the partner helped implement these features
+
 What these features allow the merchant to achieve that they previously couldn't
+
 A direct quote about solution approach or implementation from the merchant or the partner
 
 4. THE RESULTS
+
 Verify that the section with "The results:" contains information on:
+
 A description of the main outcomes of moving to Shopify
+
 A description of my the merchant values the partner
+
 A description of future plans the merchant and partner have to continue their growth
+
 A direct quote from the merchant about results and business impact
 
 OUTPUT FORMAT
+
 For each section of the verification checklist, provide your assessment in this format:
+
 [Section Name]: ✓ (Looks good!) or ❌ (more detail needed)
+
 Output the text associated with the bullet in each section. For example, if "The challenge" section needs more information on why each challenge was important to solve, output: "❌ (more detail needed): Why each challenge was important to solve"
+
 Reference specific text from the case study to point to where more detail is needed
+
 If no issues are found in a section, simply mark it as complete.
 
 At the end, provide an overall assessment:
-ALL CLEAR: Case study has a satisfactory level of detail and includes all required story elements.
-NEEDS REVISION: Case study is lacking detail in some areas that should be addressed.
-SIGNIFICANT ISSUES: Case study lacks required components (metrics and/or quotes) and needs substantial revision.
+
+ALL CLEAR: The case study has the right level of detail and includes all required story elements.
+
+NEEDS SOME UPDATES: The case study is lacking detail in some areas that will need to be added.
+
+MORE INFORMATION NEEDED: The case study is missing required information and needs larger revisions.
+
 Include a summary of the areas with most information missing if any are found.
 
-If the overall assessment is either NEEDS REVISION or SIGNIFICANT ISSUES, also say: "Above are some areas where we suggest adding more information. Following the recommendations listed in the overall assessment, provide this additional information (as either bullets or sentences) to update the draft.
+If the overall assessment is either NEEDS SOME UPDATES or MORE INFORMATION NEEDED, also say: "Above are some areas where we suggest adding more information. Following the recommendations listed in the overall assessment, provide this additional information (as either bullets or sentences) to update the draft.
 
 You can free-type the responses to these required improvement areas. The AI tool will give feedback on what information feels satisfactory and where you still need to provide more details."
 
@@ -1406,7 +1437,7 @@ Once they have provided all the necessary additional information, draft a revise
     <div class="sliding-sidebar" id="step3Sidebar" onclick="toggleStep3Sidebar()" style="position: fixed; top: 50%; right: 0px; transform: translateY(-50%); width: 300px; background: #e8f5e8; border: 1px solid #c8e6c9; border-radius: 8px 0 0 8px; padding: 1.5rem; box-shadow: -4px 0 12px rgba(0,0,0,0.1); transition: right 0.4s ease; z-index: 1000; cursor: pointer;">
         <div style="position: absolute; top: 10px; left: 15px; color: #2e7d32; font-size: 1.2rem;" id="step3Toggle">▶</div>
         <div class="sidebar-content">
-            <p style="color: #2e7d32; font-size: 0.9rem; line-height: 1.4; margin-left: 30px;">Now it's time to input the new information about the merchant you want to write a case study about.</p>
+            <p style="color: #2e7d32; font-size: 0.9rem; line-height: 1.4; margin-left: 30px;">Now that you've trained your AI tool, it's time to write your case study.</p>
         </div>
     </div>
 
