--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Write a case study using AI</title>
+    <title>Write a Shopify case study using AI</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <header>
             <div class="eyebrow-text">A tool for Shopify partners</div>
-            <h1>Write a case study using AI</h1>
+            <h1>Write a Shopify case study using AI</h1>
         </header>
 
         <nav class="step-progress-nav">
