Update intro text to mention Shopify's case study page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Intro Section -->
             <section class="step-content active" id="intro">
                 <h2>How to get started</h2>
-                <p class="intro-copy">Use the step-by-step instructions within this tool to create a compelling case study. We've provided the prompts to train a generative AI tool of your choosing. You'll share information about your agency, the merchant you worked with, and the results—then use the prompts to turn the details into a comprehensive draft.</p>
+                <p class="intro-copy">Use the step-by-step instructions within this tool to create a compelling case study for publishing on Shopify's case study page. We've provided the prompts to train a generative AI tool of your choosing. You'll share information about your agency, the merchant you worked with, and the results—then use the prompts to turn the details into a comprehensive draft.</p>
                 <div class="content-area">
 
                     <h3>Helpful guidelines</h3>
