--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <div class="eyebrow-text">A tool for Shopify partners</div>
+            <div class="eyebrow-text">A collaborative tool for Shopify partners</div>
             <h1>Write a Shopify case study using AI</h1>
         </header>
 
